--- a/platformio.ini
+++ b/platformio.ini
@@ -8,8 +8,24 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nanoatmega328]
+[env:nanoatmega328new]
 platform = atmelavr
 board = nanoatmega328new
 framework = arduino
 lib_deps = thomasfredericks/Bounce2@^2.72
+upload_protocol = custom
+upload_port = COM6
+upload_speed = 19200
+upload_flags =
+    -C
+    ; use "tool-avrdude-megaavr" for the atmelmegaavr platform
+    ${platformio.packages_dir}/tool-avrdude/avrdude.conf
+    -p
+    $BOARD_MCU
+    -P
+    $UPLOAD_PORT
+    -b
+    $UPLOAD_SPEED
+    -c
+    stk500v1
+upload_command = avrdude $UPLOAD_FLAGS -U flash:w:$SOURCE:i
